[gd_scene load_steps=11 format=2]

[ext_resource path="res://Hancking_Game/Avatars/EnemyTank1.gd" type="Script" id=1]
[ext_resource path="res://Hancking_Game/Assets/Hack Avatars/PShip1.png" type="Texture" id=2]
[ext_resource path="res://Hancking_Game/Assets/Hack Avatars/PShip2.png" type="Texture" id=3]
[ext_resource path="res://Hancking_Game/Assets/Hack Avatars/PShip2AI.png" type="Texture" id=4]
[ext_resource path="res://Hancking_Game/Assets/Hack Avatars/PShip3.png" type="Texture" id=5]
[ext_resource path="res://Hancking_Game/Assets/Hack Avatars/Turret1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]


[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]


[node name="EnemyTank1" type="KinematicBody2D"]
script = ExtResource( 1 )
max_speed = 0
health = 100
turret_speed = 20.0
detect_radius = 400

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.57175
frames = SubResource( 1 )
frame = 4
playing = true

[node name="DetectRadius" type="Area2D" parent="."]
rotation = 1.57175
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
light_mask = 0
rotation = -7.45058e-011
scale = Vector2( 50, 50 )
shape = SubResource( 2 )

[node name="Turret" type="AnimatedSprite" parent="."]
position = Vector2( -50.678, -0.0913639 )
rotation = 0.000872648
scale = Vector2( 0.550648, 0.550648 )
frames = SubResource( 3 )
offset = Vector2( 26.7922, 0.168322 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 0.12955, -137.888 )

[node name="GunTimer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HPBody" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
